修复ButterKnife bug，修复自定义属性无法引用bug

--- a/ChatDemoUI3.0/res/values-zh/strings.xml
+++ b/ChatDemoUI3.0/res/values-zh/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="nick">nick</string>
+    <string name="toast_nick_not_modify">昵称未修改</string>
+    <string name="User_name_cannot_be_modify">用户名不能修改</string>
 </resources>
