--- a/ChatDemoUI3.0/res/values/strings.xml
+++ b/ChatDemoUI3.0/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="nick">nick</string>
+    <string name="toast_nick_not_modify">toast nick not modify</string>
+    <string name="User_name_cannot_be_modify">user name cannot be modify</string>
 </resources>
